removed useless code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@ android:layout_height="fill_parent" >
         android:id="@+id/map"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        class="project.dajver.com.drawgesturesmap.map.MySupportMapFragment" />
+        class="com.google.android.gms.maps.SupportMapFragment" />
 
 <FrameLayout
     android:id="@+id/fram_map"
